--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.6",
     "angular": "^1.6.10",
     "bootstrap3": "^3.3.5",
+    "request-promise": "4.2.2",
     "jquery": "^3.3.1"
   }
 }
